--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -42,3 +42,8 @@ logging:
       hibernate:
         SQL: debug
         type: trace
+
+kakao:
+  client-id: d5741d35440025fd9b0a7537f7a8aaf8
+  client-secret: nPsWMJBVUzFqFncJGsLQwPB2HdG95e36
+  redirect-uri: http://localhost:8080/auth/kakao/callback
