--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,13 @@ dependencies {
 	implementation 'com.auth0:java-jwt:4.2.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// QueryDSL 설정
+	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	// -- QueryDSL ---
+
 	//json parser
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
@@ -47,4 +54,10 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+def generatedDir = 'src/main/generated'
+
+clean {
+	delete file (generatedDir)
 }
