--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,5 @@ spring:
     group:
       "dev-profile": "dev"
       "prod-profile": "prod"
-    active: dev-profile
+      "local-profile": "local"
+    active: local-profile
