--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,4 @@ spring:
     group:
       "dev-profile": "dev"
       "prod-profile": "prod"
-      "local-profile": "local"
-    active: local-profile
+    active: dev-profile
