--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -46,9 +46,9 @@ spring:
 
           naver:
             authorization_uri: https://nid.naver.com/oauth2.0/authorize
-            token_uri: https://nid.naver.com/oauth2.0/token
+            token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
-            user_name_attribute: response
+            user-name-attribute: response
 
   jpa:
     show-sql: true
