--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -61,6 +61,10 @@ spring:
 
     open-in-view: false
 
+  output:
+    ansi:
+      enabled: always
+
 # Swagger springdoc-ui Configuration
 springdoc:
   packages-to-scan: com.kr.matitting
@@ -94,7 +98,7 @@ jwt:
   refresh:
     expiration: 259200000
 
-    header: Authorization-refresh
+    header: Authorization-Refresh
 
 kakaoMap:
   key: REST API 키
