--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,16 @@
 spring:
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: false
   config:
     activate:
       on-profile: dev
-  thymeleaf:
-    prefix: classpath:templates/
-    suffix: .html
+  freemarker:
     cache: false
+    enabled: true
+    template-loader-path: classpath:/templates
 
   redis:
     host: localhost
