--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
       "dev-profile": "dev"
       "prod-profile": "prod"
       "docker-profile": "docker"
-    active: dev-profile
+    active: docker-profile
