--- a/build.gradle
+++ b/build.gradle
@@ -60,9 +60,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	//websocket
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'org.webjars:sockjs-client:1.1.2'
-	implementation 'org.webjars:stomp-websocket:2.3.3-1'
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation 'org.webjars:stomp-websocket:2.3.4'
+	implementation 'org.springframework:spring-messaging'
+	implementation 'org.springframework.security:spring-security-messaging'
 
 	//view
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
