--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -4,6 +4,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        enable_lazy_load_no_trans: true
 
     hibernate:
       ddl-auto: create
