--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -5,9 +5,10 @@ spring:
       hibernate:
         format_sql: true
         enable_lazy_load_no_trans: true
+    database-platform: org.hibernate.dialect.MySQLDialect
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
 
     open-in-view: false
 
